Pushed code on 28 Nov 2018

--- a/assets/css/cause.css
+++ b/assets/css/cause.css
@@ -162,8 +162,9 @@ a.certificate_icon {color: #FFF;}
     top: 75px;
     position: relative;
 }
+#project-page p{color:#FFF;}
 /* Popup box BEGIN */
-.popup{
+.popup, .popup_appr{
     background:rgba(0,0,0,.4);
     cursor:pointer;
     display:none;
@@ -174,7 +175,11 @@ a.certificate_icon {color: #FFF;}
     width:100%;
     z-index:10000;
 }
-.popup .helper{
+.popup_appr > div {
+    max-width: 870px!important;
+	font-size: 19px!important;
+}
+.popup .helper, .popup_appr .helper{
     display:inline-block;
     height:100%;
     vertical-align:middle;
@@ -182,7 +187,7 @@ a.certificate_icon {color: #FFF;}
 .pop_buttons {
     margin-top: 20px;
 }
-.popup > div {
+.popup > div, .popup_appr > div {
     background-color: #27A0AB;
     box-shadow: 10px 10px 60px #555;
 	color:#FFF;
@@ -196,7 +201,7 @@ a.certificate_icon {color: #FFF;}
     border-radius: 8px;
     padding: 15px 5%;
 	font-size: 21px;
-}
+}-
 .popupCloseButton {
     background-color: #fff;
     border: 3px solid #999;
@@ -262,3 +267,26 @@ select#donor-list {
     width: 100%;
 }
 .activity_pop{left:0;}
+.added_act_amt {
+    width: 120px;
+    background: transparent;
+    color: #FFF;
+    border: none;
+    text-align: right;
+}
+.added_act_amt::placeholder {
+    color: #fff;
+}
+
+
+
+/* Performance %age circle */
+.slice{
+	font-size: 70px;
+    top: -6px;
+    left: -6px;
+}
+.c100:after{background:unset!important;}
+.c100 .bar, .fill {
+    border-color: #3FE8E9!important;
+}
