--- a/assets/css/corporate.css
+++ b/assets/css/corporate.css
@@ -273,3 +273,14 @@ label {
      
     font-size: 1.6em !important;
 }
+.avt-sec a {
+   font-size:14px !important;
+}
+select#Dropdownlanguage {
+    width: 100% !important;
+    font-size: 14px !important;
+}
+.menus a {
+    color: #fff;
+    font-size: 14px;
+}
