--- a/assets/css/coworker.css
+++ b/assets/css/coworker.css
@@ -6,8 +6,12 @@ section.voting-sec {
     margin-left: 10%;
 }
 .vote-box { 
-    left: 40%;
-    top: 230px;
+    width: 64px;
+    margin: 0 auto;
+    background: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    position: relative;
 }
 ul.voting-option li {
     background: #27A8AC;  
@@ -151,10 +155,10 @@ ul.voting-option li span{
 }
 #voting_thanks .popup_body p{color:#FFF;}
 div#voting_details {
-    position: absolute;
-    left: 105px;
-    bottom: -35px;
     color: cyan;
+    text-align: center !important;
+    margin-top: 20px;
+	margin-bottom: 10px;
 }
 
 .voting-main .col-sm-4{
@@ -196,4 +200,298 @@ div#voting_details {
     left: 50%;
     transform: translateX(-50%);
     top: 12px;
+}
+
+
+.activity-box{display:none;}
+.create-activity.btn.creat-btn{margin-bottom:10px; display:block;}
+.iactive .fa { color: cyan;}
+.icon-list li {margin-right: 5px;}
+.exp-icon{display:none;}
+.exp-icon.scenario_ul_show{display:flex;}
+.act_timeline  li  .timeline-badge {
+    color: #fff;
+    width: 50px;
+    height: 50px;
+    line-height: 46px; 
+    font-size: 1.4em;
+    text-align: center;
+    position: absolute; 
+  /*   top: 16px; */
+    left: 50%;
+    margin-left: -25px;
+    background-color: #999999;
+    z-index: 100;
+    border-top-right-radius: 50%;
+    border-top-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    border-bottom-left-radius: 50%;
+    border: solid 2px #fff;
+}
+.act_timeline-panel{display:flex;}
+.left-panel { 
+    width: 50%;
+    float: left;
+	position:relative;
+}
+.right-panel {
+    float: right;
+    width: 34%;
+}
+.act_timeline > li {
+    margin-bottom: 20px;
+    position: relative;
+}
+.act_timeline > li:before, .act_timeline > li:after {
+    content: " ";
+    display: table;
+}
+.act_timeline{display:none;}
+.act_timeline.activity_ul_show{display:flex;}
+#project-page{
+	background-size:cover!important;
+	min-height:80vh;
+}
+.cause-photo img, .cause-photo {height: 180px;} 
+.cause-des {min-height: 100px;}
+.exp-icon img{cursor:pointer;} 
+input#upload-file-selector-reg, input#upload-file-selector-reg_vali{
+     display: none;
+}
+.upload-file-act {
+    display: none;
+}
+.exp-icon li img{display:none;}
+.exp-icon li img.show{display:block;}
+a.stage_icon {color: #fff;}
+.timeline > li > .timeline-badge.badge_selected{border:solid 2px #27A7A8;}
+.timeline-badge.badge_selected a{color:#2ACEB5;}
+#stage-timeline {margin-top: 100px;}
+button#finish-stages {margin-left: 5px;}
+.error, .logo_error, .ins_certificateo_error{display:none; color:red; font-size:12px;}
+.avt-sec a{color:#FFF;}
+.menus a{color:#fff; }
+.menus {
+    text-align: left;
+    position: absolute;
+    right: 29px;
+    background: #27A7A8;
+    width: 163px;
+}
+.menus li {
+    padding: 5px 0 5px 6px;
+}
+.exp-icon li, .exp-icon li.selected-ic {
+    margin-bottom: 15px;
+    padding: 0 0 0 20px;
+}
+.exp-icon li p{font-size:14px;}
+a.back_to_stage{color:#FFF;}
+.simp-btn{
+	margin:0;
+	padding:0;
+	text-align:center;
+}
+.simp-btn li{
+	display:block;
+	background: #d9d9d9;
+}
+.simp-btn li a{ 
+	padding:5px 10px;
+	color:#fff;
+	display:inline-block;
+}
+.simp-btn .cert_remove, .simp-btn .serv_remove {
+    float: right;
+}
+.simp-btn li:hover, .simp-btn li.active{
+	background:#2aceb5;
+}
+.lb-space{
+	margin-bottom:5px!important;
+}
+.certificate_form, .services_form{
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 30px;
+    border-radius: 0.3rem;
+}
+.upload_certificates_images, .upload_service_images{display:none;}
+.timeline-title {text-align: right;}
+.timeline-right .timeline-title {text-align: left;}
+.timeline:before {left: 52%;margin-left: 0.5px;}
+.timeline > li > .timeline-badge{    width: 70px; height: 70px;line-height: 61px;border: solid 6px #fff;}
+.timeline > li > .timeline-badge.badge_selected {
+    border: solid 6px #2ACEB5;
+}
+.timeline-right { padding: 50px 0 35px 20px;}
+.timeline > li > .timeline-panel {padding: 50px 20px 35px 0;}
+a.certificate_icon {color: #FFF;}
+.certificate_sec .timeline-badge {
+    color: #fff;
+    width: 70px;
+    height: 70px;
+    font-size: 1.4em;
+    text-align: center;
+    position: absolute;
+	line-height: 61px;
+    left: 50%;
+    margin-left: -25px;
+    background-color: #999999;
+    z-index: 100;
+    border-top-right-radius: 50%;
+    border-top-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    border-bottom-left-radius: 50%;
+    border: solid 2px #fff;
+}
+.hide_img{display:none;}
+.cause-des {
+    min-height: 72px;
+}
+.cause-des.light {
+    background: #2ACEB5;
+    text-align: center;
+	min-height: 0;
+}
+.cause-des.light h4 {
+    text-align: center;
+    padding-bottom: 0;
+}
+#instruction{
+	text-align: center;
+    color: #2ACEB5;
+	font-weight: 500;
+}
+.certificate_sec span{
+	color: #fff;
+    top: 75px;
+    position: relative;
+}
+#project-page p{color:#FFF;}
+/* Popup box BEGIN */
+.popup, .popup_appr{
+    background:rgba(0,0,0,.4);
+    cursor:pointer;
+    display:none;
+    height:100%;
+    position:fixed;
+    text-align:center;
+    top:0;
+    width:100%;
+    z-index:10000;
+}
+.popup_appr > div {
+    max-width: 870px!important;
+	font-size: 19px!important;
+}
+.popup .helper, .popup_appr .helper{
+    display:inline-block;
+    height:100%;
+    vertical-align:middle;
+}
+.pop_buttons {
+    margin-top: 20px;
+}
+.popup > div, .popup_appr > div {
+    background-color: #27A0AB;
+    box-shadow: 10px 10px 60px #555;
+	color:#FFF;
+    display: inline-block;
+    height: auto;
+    max-width: 551px;
+    min-height: 100px;
+    vertical-align: middle;
+    width: 60%;
+    position: relative;
+    border-radius: 8px;
+    padding: 15px 5%;
+	font-size: 21px;
+}-
+.popupCloseButton {
+    background-color: #fff;
+    border: 3px solid #999;
+    border-radius: 50px; 
+    cursor: pointer;
+    display: inline-block;
+    font-family: arial;
+    font-weight: bold;
+    position: absolute;
+    top: -20px;
+    right: -20px;
+    font-size: 25px;
+    line-height: 30px;
+    width: 30px;
+    height: 30px;
+    text-align: center; 
+}
+.popupCloseButton:hover {
+    background-color: #ccc;
+}
+.publish_cause_butn {
+    cursor: pointer;
+    /* font-size: 20px;
+    margin: 20px;
+    display: inline-block;
+    font-weight: bold; */
+}
+/* Popup box end */
+.institution-logo img {
+    border-radius: 50%;
+    width: 150px;
+    border: 7px solid #FFF;
+    height: 150px;
+}
+img.cert_image{
+    border-radius: 50%;
+    width: 120px;
+    height: 100px;
+    border: 7px solid #fff;
+}
+img.service_image{
+    border-radius: 50%;
+    width: 120px;
+    height: 100px;
+    border: 7px solid #fff;
+}
+#certificates-listing  .box1 {
+    padding: 0px 0 25px 0;
+}
+div#certificates-listing {
+    color: #FFF;
+	display:none;
+}
+#certificates-listing  .cert_corpo {
+    padding: 10px 0 10px 0;
+}
+span.add_more_span {
+    text-align: right;
+    display: block;
+    padding: 10px 0 0 0;
+}
+select#donor-list {
+    width: 100%;
+}
+.activity_pop{left:0;}
+.added_act_amt {
+    width: 120px;
+    background: transparent;
+    color: #FFF;
+    border: none;
+    text-align: right;
+}
+.added_act_amt::placeholder {
+    color: #fff;
+}
+
+
+
+/* Performance %age circle */
+.slice{
+	font-size: 70px;
+    top: -6px;
+    left: -6px;
+}
+.c100:after{background:unset!important;}
+.c100 .bar, .fill {
+    border-color: #3FE8E9!important;
 }
