--- a/assets_admin/css/admin.css
+++ b/assets_admin/css/admin.css
@@ -117,10 +117,10 @@ a.back_to_stage{color:#FFF;}
 .simp-btn li a{ 
 	padding:5px 10px;
 	color:#fff;
-	display:block;
+	display:inline-block;
 }
 
-.simp-btn li a:hover, .simp-btn li a.active{
+.simp-btn li:hover, .simp-btn li.active{
 	background:#2aceb5;
 }
 
@@ -304,7 +304,7 @@ label {
 
 .btn {
   
-    padding: 16px 40px !important;
+    padding: 16px 25px !important;
     border: 0px !important;
     border-radius: 0px !important;
 }
@@ -326,5 +326,51 @@ i.fa.fa-check {
     margin-right: 20px;
 	color: #27a8ac;
 }
+.institution-logo img {
+    border-radius: 50%;
+    width: 150px;
+    border: 7px solid #FFF;
+    height: 150px;
+}
+img.cert_image{
+    border-radius: 50%;
+    width: 120px;
+    height: 100px;
+    border: 7px solid #fff;
+}
+img.service_image{
+    border-radius: 50%;
+    width: 120px;
+    height: 100px;
+    border: 7px solid #fff;
+}
+#certificates-listing  .box1 {
+    padding: 0px 0 25px 0;
+}
+div#certificates-listing {
+    color: #FFF;
+	display:none;
+}
+#certificates-listing  .cert_corpo {
+    padding: 10px 0 10px 0;
+}
+span.add_more_span {
+    text-align: right;
+    display: block;
+    padding: 10px 0 0 0;
+}
+select#donor-list {
+    width: 100%;
+}
+.activity_pop{left:0;}
 
-
+.added_act_amt {
+    width: 120px;
+    background: transparent;
+    color: #FFF;
+    border: none;
+    text-align: right;
+}
+.added_act_amt::placeholder {
+    color: #fff;
+}
